# FilamentEngine

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
cmake/: FilamentMaterials.cmake
engine/: CMakeLists.txt
engine/include/filament_engine/: filament_engine.h
engine/include/filament_engine/core/: application.h  clock.h  event_bus.h  input.h  input_action.h  input_map.h  log.h  window.h
engine/include/filament_engine/ecs/: components.h  entity.h  entity_bridge.h  entity_impl.h  scene.h  system.h  world.h
engine/include/filament_engine/ecs/systems/: camera_system.h  editor_camera_system.h  light_system.h  render_sync_system.h  transform_sync_system.h
engine/include/filament_engine/math/: types.h
engine/include/filament_engine/rendering/: debug_renderer.h  render_context.h
engine/include/filament_engine/resources/: material.h  mesh.h  resource_handle.h  resource_manager.h
engine/include/filament_engine/ui/: imgui_layer.h  overlay.h
engine/src/core/: application.cpp  clock.cpp  input.cpp  input_action.cpp  input_map.cpp  log.cpp  native_window_cocoa.mm  window.cpp
engine/src/ecs/: entity.cpp  entity_bridge.cpp  scene.cpp  world.cpp
engine/src/ecs/systems/: camera_system.cpp  editor_camera_system.cpp  light_system.cpp  render_sync_system.cpp  transform_sync_system.cpp
engine/src/rendering/: debug_renderer.cpp  render_context.cpp
engine/src/resources/: material.cpp  mesh.cpp  resource_manager.cpp
engine/src/ui/: imgui_layer.cpp
materials/: debug_lines.mat  standard_lit.mat  unlit_color.mat
sandbox/: CMakeLists.txt  main.cpp
sandbox/assets/ibl/: ibl_ibl.ktx  ibl_skybox.ktx  sh.txt
scripts/: build.ps1  build.sh  check_pe.ps1  compile_materials.sh  runtest.sh  setup.ps1  setup.sh
tests/: CMakeLists.txt  test_helpers.h
tests/integration/: test_diagnostic.cpp  test_filament_pipeline.cpp
tests/unit/: test_clock.cpp  test_components.cpp  test_debug_renderer.cpp  test_entity_bridge.cpp  test_event_bus.cpp  test_input.cpp  test_input_action.cpp  test_input_map.cpp  test_math_utils.cpp  test_overlay.cpp  test_resource_handle.cpp
